# swift-xtensa

./: .gitignore  .swift-workspace  ARCHITECTURE.md  QUICKSTART.md  README.md  build-env.sh  build-llvm-xtensa.sh  build-swift-compiler-complete.sh  build-swift-compiler-final.sh  build-swift-compiler.sh  build-swift-minimal.sh  build-swift-project.sh  build-swift-xtensa-minimal.sh  build-swift-xtensa.sh  fix-cmake-checkout.sh  fix-llvm-path.sh  package-toolchain.sh  setup-repositories.sh  setup-swift-xtensa-repos.sh  setup-swift-xtensa.sh  swift-llvm-xtensa-patches.sh  swift-xtensa-build-script.sh  swift-xtensa-build.sh  swift-xtensa-cmake-build.sh  test_swift.swift
.github/workflows/: build.yml
esp32-s3-swift-baremetal/: Makefile  Package.swift  README.md
esp32-s3-swift-baremetal/Sources/Application/: main.swift  main_minimal.swift
esp32-s3-swift-baremetal/Sources/Support/: esp_app_desc.c
esp32-s3-swift-baremetal/Sources/Support/ld/sections/: alias.x  device.x  exception.x
esp32-s3-swift-baremetal/Tools/Partitions/: README.md
esp32-s3-swift-baremetal/Tools/Toolsets/: esp32-s3-elf.json
esp32s3-swift-test/: CMakeLists.txt  README.md  build-swift.sh  sdkconfig.defaults  test_simple.swift
esp32s3-swift-test/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  atomic_stubs.c  main.c  swift_functions.h  swift_sections.ld  swift_wrapper.c
install/share/clang/: features.json
xtensa-rust-patches/: 0001-Use-llvm-submodule-with-Xtensa-arch-support.patch  0002-asm-support-for-the-Xtensa-architecture-68.patch  0003-Enable-Xtensa-codegen-for-rustc_codegen_gcc.patch  0004-README-for-esp-rs-rust.patch  0005-Add-esp8266-no_std-target.patch  README.md  TECHNICAL_ANALYSIS.md  all-xtensa-changes.diff
